1.Learn More Tabs size and alignment fix. 2.minor changes in text and paragrraph

--- a/src/main/webapp/css/LearnMoreSlider.css
+++ b/src/main/webapp/css/LearnMoreSlider.css
@@ -8,8 +8,10 @@ and open the template in the editor.
     Author     : amitj
 */
 #LMcontentContainer {
-    width: 96%;
-    margin: 2%;
+    /*width: 96%;*/
+    margin: 1%;
+    margin-left: 0;
+    margin-right: 0;
     overflow: hidden;
 }
 
@@ -39,15 +41,18 @@ and open the template in the editor.
 .LMcontent {
     position: relative;
     float:left;
-    margin-top: 7em;
-    padding: 1.5em;
+    margin-top: 8em;
+    padding: 0.6em;
+    padding-left: 0;
+    padding-right: 0;
     pointer-events: all;
     -webkit-transition: all 2s ease-in-out;
     transition: all 2s ease-in-out;
 
 }
 .LMcontent>div{
-    padding: 1em;
+    padding: 2.5em;
+    padding-left: 3em;
     border: 3px solid rgba(215, 175, 230, 0.8);
     background: rgba(255,255,255,0.3);
     font-size: 16px;
